[tool.poetry]
name = "oci-tool"
version = "0.1.0"
description = ""
authors = ["Jonkimi <JonkimyLiao@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
oci = "^2.130.0"
cloudflare = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
